# keikaku-programming-language

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh  test.txt
.github/workflows/: ci.yml
build-win/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
compiler/: Makefile  ast.c  ast.h  interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  parser.c  parser.h
docs/: GETTING_STARTED.md  QUICK_REFERENCE.md  async.md  error_handling.md  generators.md  language_tour.md
examples/: advanced_features.kei  calculator.kei  debug_test.kei  factorial.kei  fibonacci.kei  fizzbuzz.kei  greeter.kei  guess_game.kei  hello.kei  lists.kei  math_lib.kei  reproduce_issue.kei  special_constructs.kei  test_ascend.kei  test_async.kei  test_attempt.kei  test_cycle_destructuring.kei  test_delegate.kei  test_entity.kei  test_extended_features.kei  test_gen_exception.kei  test_gen_expr.kei  test_incorporate.kei  test_new_features.kei  test_new_manifestations.kei  test_param_destructuring.kei  test_rest_params.kei  test_sequences.kei  test_simple_gen.kei  test_transmit.kei
grammar/: Keikaku.g4
include/: keikaku.h
packaging/arch/: PKGBUILD
packaging/debian/: install.sh
packaging/windows/: Toolchain-mingw.cmake  build_exe.sh
tests/: test_runner.py
tests/suite/: 01-hello.kei  02-control-flow.kei  03-sequence-basic.kei  04-sequence-delegate.kei  05-sequence-bidirectional.kei  06-async-await.kei  07-error-handling.kei
tools/vscode-keikaku/: language-configuration.json  package.json
tools/vscode-keikaku/syntaxes/: keikaku.tmLanguage.json
